[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
license = "MIT/Apache-2.0"
name = "cargo-sysroot"
version = "0.1.0"

[dependencies]
chrono = "0.2.19"
clap = "2.0.2"
curl = "0.2"
fern = "0.3.5"
flate2 = "0.2"
log = "0.3.5"
rustc_version = "0.1.6"
tar = "0.4"
tempdir = "0.3.4"
toml = "0.1.27"
